--- a/professor.html
+++ b/professor.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Essay Search</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -175,7 +175,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
     </div>
 
-    <!-- team -->
+    <!-- professorFuctionTop -->
     <div class="team">
         <div class="container">
             <div class="w3-banner-bottom-heading">
@@ -185,19 +185,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- Bottom to top-->
                 <div class="col-sm-4 team-grid">
                     <!-- normal -->
-                    <div class="ih-item circle effect10 bottom_to_top">
+                    <button class="ih-item circle effect10 bottom_to_top">
                         <div class="img"><img src="images/t1.jpg" alt="img" /></div>
                         <div class="info">
                             <h3>修改专家信息</h3>
                             <!--<div class="icons">-->
-                                <!--<ul>-->
-                                    <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
-                                    <!--<li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
-                                    <!--<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>-->
-                                <!--</ul>-->
+                            <!--<ul>-->
+                            <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+                            <!--<li class="team-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+                            <!--<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>-->
+                            <!--</ul>-->
                             <!--</div>-->
                         </div>
-                    </div>
+                    </button>
                     <!-- end normal -->
                 </div>
                 <div class="col-sm-4 team-grid">
@@ -225,7 +225,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </div>
     </div>
-    <!-- //team -->
+    <!-- //professorFuctionTop -->
+
+    <!--professorFuctionBottom-->
+    <div class="paper">
+        <div class="container">
+            <div class="proFuc1">
+                <h3>修改<span>个人信息</span></h3>
+                <textarea></textarea><br/>
+                <input type="submit" value="提交"/>
+            </div>
+            <div class="proFuc2">
+                <h3>门户<span>信息申诉</span></h3>
+                <textarea></textarea><br/>
+                <input type="submit" value="提交"/>
+            </div>
+            <div class="proFuc3">
+                <h3>修改资源<span>购买积分</span></h3>
+                <textarea></textarea><br/>
+                <input type="submit" value="提交"/>
+            </div>
+        </div>
+    </div>
+    <!--//professorFuctionBottom-->
+
 </div>
 <!-- //about -->
 <!-- footer -->
