犀利的一波操作，按篇名搜索完成

--- a/results.html
+++ b/results.html
@@ -142,7 +142,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-md-8 agile-blog-grid-left" id="resultsContainer">
                 <div class="classification">
                     排序：
-                    <select class="sort_select">
+                    <select class="sort_select" id="classifyMethod">
                         <option value ="correlation" selected="selected">按相关性</option>
                         <option value ="cite_num">按被引量</option>
                         <option value="publish_time">按时间降序</option>
@@ -171,7 +171,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 <span aria-hidden="true">«</span>
                             </a>
                         </li>
-                        <li><a href="#">1</a></li>
+                        <li><span id="current_page">1</span></li>
                         <li><a href="#">2</a></li>
                         <li><a href="#">3</a></li>
                         <li><a href="#">4</a></li>
