现在能获取专家个人资料了233

--- a/professor.html
+++ b/professor.html
@@ -124,7 +124,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <div class="w3-banner-bottom-heading about-choose">
                 <h3 id="professorName">专家姓名  </h3>
-                <h3 id="professprID"><span>                                ID:123456</span></h3>
+                <h3 id="professorID"><span>                                ID:123456</span></h3>
             </div>
             <div class="agile-choose-grids">
                 <div class="col-sm-4 agile-choose-grid">
@@ -132,8 +132,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <i class="fa fa-user" aria-hidden="true"></i>
                     </div>
                     <div class="choose-info">
-                        <h4 id="introduction">介绍</h4>
-                        <p>被引频次 32815 成果数 615 H指数 77 G指数 178</p>
+                        <h4>介绍</h4>
+                        <p id="introduction">被引频次 32815 成果数 615 H指数 77 G指数 178</p>
                     </div>
                 </div>
                 <div class="col-sm-4 agile-choose-grid">
@@ -141,8 +141,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <i class="fa fa-cogs" aria-hidden="true"></i>
                     </div>
                     <div class="choose-info">
-                        <h4 id="institution">组织机构</h4>
-                        <p>北京大学中国经济研究中心</p>
+                        <h4>组织机构</h4>
+                        <p id="institution">北京大学中国经济研究中心</p>
                     </div>
                 </div>
                 <div class="col-sm-4 agile-choose-grid">
@@ -150,8 +150,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
                     </div>
                     <div class="choose-info">
-                        <h4 id="researchField">科研领域</h4>
-                        <p>发展经济学</p>
+                        <h4>科研领域</h4>
+                        <p id="researchField">发展经济学</p>
                     </div>
                 </div>
             </div>
@@ -165,12 +165,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="w3-banner-bottom-heading">
                 <h3>论文<span>成果</span></h3>
             </div>
-            <div class="team-grids">
-                <p class="paperName"> "固守“西天取经”得来的教条危害甚巨",</p>
-                <p> "新结构经济学、自生能力与新的理论见解",</p>
-                <p>"一带一路与自贸区:中国新的对外开放倡议与举措",</p>
-                <p>"供给侧改革彰显我国制度优越性",</p>
-                <p>"把投资需求与补短板相结合"</p>
+            <div class="team-grids" id ="papername_containner">
             </div>
         </div>
     </div>
