收藏界面基本编写

--- a/user/userinfo.html
+++ b/user/userinfo.html
@@ -139,10 +139,10 @@
         <aside style="display: -webkit-flex;justify-content: flex-start;">
             <ul>
                 <li style="list-style: none">
-                    <button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">个人信息</button>
+                    <a href="userinfo.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">个人信息</button></a>
                 </li>
                 <li style="list-style: none">
-                    <button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">我的收藏</button>
+                    <a href="collection.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">我的收藏</button></a>
                 </li>
                 <li style="list-style: none">
                     <button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">浏览记录</button>
