--- a/user/collection.html
+++ b/user/collection.html
@@ -3,8 +3,191 @@
 <head>
     <meta charset="UTF-8">
     <title>collection</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="keywords" content="" />
+    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+    <!-- bootstrap-css -->
+    <link href="../css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <!--// bootstrap-css -->
+    <!-- css -->
+    <link rel="stylesheet" href="../css/style.css" type="text/css" media="all" />
+    <!--// css -->
+    <!-- font-awesome icons -->
+    <link href="../css/font-awesome.css" rel="stylesheet">
+    <!-- //font-awesome icons -->
+    <!-- font -->
+    <link href="http://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300' rel='stylesheet' type='text/css'>
+    <!-- //font -->
+    <script src="../js/jquery-1.11.1.min.js"></script>
+    <script src="../js/bootstrap.js"></script>
+    <script src="../js/SmoothScroll.min.js"></script>
+    <script src="../js/checkIfLogin.js"></script>
+    <script src="../js/results.js"></script>
+    <!--collection.js引入-->
+    <script src="../js/user-js/collection.js"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function($) {
+            $(".scroll").click(function(event){
+                event.preventDefault();
+                $('html,body').animate({scrollTop: $(this.hash).offset().top}, 1000);
+            });
+        });
+    </script>
+    <link href='../css/immersive-slider.css' rel='stylesheet' type='text/css'>
+    <!-- pricing -->
+    <link rel="stylesheet" href="../css/jquery.flipster.css">
+    <!-- //pricing -->
 </head>
 <body>
+<!-- header-top -->
+<div class="header-top">
+    <div class="container">
+        <div class="address-title">
+            <ul>
+                <li id="loginButton"><a href="../login.html">登录</a></li>
+                <li id="registerButton"><a href="../registration.html">注册</a></li>
+                <li id="changePassword" style="display: none"><a href="../changepassword.html">&nbsp;&nbsp;&nbsp;&nbsp;修改密码</a></li>
+                <li id="logout" style="display: none"><a href="" onclick="logout()">&nbsp;&nbsp;&nbsp;&nbsp;注销</a></li>
+            </ul>
+        </div>
+        <div class="agileinfo-social-grids">
+            <ul>
+                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa fa-rss"></i></a></li>
+                <li><a href="#"><i class="fa fa-vk"></i></a></li>
+            </ul>
+        </div>
+        <div class="clearfix"> </div>
+    </div>
+</div>
+<!-- //header-top -->
+<!-- header -->
+<div class="header">
+    <div class="container">
+        <nav class="navbar navbar-default">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <div class="logo-style">
+                    <h1><a href="../index.html">Essay <span>Search</span></a></h1>
+                </div>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
+                <nav>
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="../index.html">主页</a></li>
+                        <li><a href="../results.html" class="hvr-sweep-to-bottom">论文</a></li>
+                        <li><a href="../professor.html" class="hvr-sweep-to-bottom">专家</a></li>
+                        <li><a href="../subject.html" class="hvr-sweep-to-bottom">学科</a></li>
+                        <li><a href="#" class="dropdown-toggle hvr-sweep-to-bottom" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">其他界面<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a class="hvr-sweep-to-bottom" href="../services.html">Services</a></li>
+                                <li><a class="hvr-sweep-to-bottom" href="../faq.html">FAQs</a></li>
+                                <li><a class="hvr-sweep-to-bottom" href="../login.html">Login</a></li>
+                                <li><a class="hvr-sweep-to-bottom" href="../registration.html">Registration</a></li>
+                                <li><a class="hvr-sweep-to-bottom" href="../icons.html">Icons</a></li>
+                                <li><a class="hvr-sweep-to-bottom" href="../typography.html">Typography</a></li>
+                                <li><a href="../mail.html" class="hvr-sweep-to-bottom">Mail Us</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <!-- /.navbar-collapse -->
+        </nav>
+    </div>
+</div>
+
+<!-- //banner -->
+<div class="domain domain_results">
+    <div class="container">
+        <form class="search-form domain-search" action="../results.html" method="get">
+            <div class="two-fifth column first">
+                <h2>文献检索</h2>
+            </div>
+            <div class="three-fifth column first">
+                <input type="text" class="text" name="searchInfo" placeholder="输入关键词进行查询" required="">
+            </div>
+            <div class="one-fifth column">
+					<span class="selection-box">
+						<select class="select-type" name="searchingType">
+							<option value="keyword">关键词</option>
+							<option value="title">篇名</option>
+							<option value="author">作者</option>
+							<option value="subject">学科</option>
+						</select>
+					</span>
+            </div>
+            <div class="one-fifth column">
+                <input type="submit" value="检索">
+            </div>
+            <div class="clearfix"> </div>
+        </form>
+    </div>
+</div>
+
+<div class="container" style="width: 100%;height: 100%; margin-top: 2rem; display: flex;display: -webkit-flex;justify-content: flex-start;align-items: flex-start">
+    <div style="width: 20%; display: flex;float: left; padding-left: 2%">
+        <aside style="display: -webkit-flex;justify-content: flex-start;">
+            <ul>
+                <li style="list-style: none">
+                    <a href="userinfo.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">个人信息</button></a>
+                </li>
+                <li style="list-style: none">
+                    <a href="collection.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">我的收藏</button></a>
+                </li>
+                <li style="list-style: none">
+                    <button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">浏览记录</button>
+                </li>
+                <li style="list-style: none">
+                    <button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">购买记录</button>
+                </li>
+            </ul>
+        </aside>
+    </div>
+
+    <div style="width: 70%;">
+        <div class="modal-header">
+            <h2 style="">我的收藏&nbsp;&nbsp;&nbsp;&nbsp;<a id="change-btn" onclick="showChangeForm()"><i class="glyphicon glyphicon-pencil"></i></a></h2>
+        </div>
+        <div id="collection-container" class="modal-body">
+                <div class="blog-left-grids">
+                    <div class="blog-left-right_results">
+                        <div class="blog-left-right-top">
+                            <h4><a href="../resultpage.html">Integer et turpis augue. In hac habitasse platea dictumst.</a><img src="../images/point.png"><span class="point_icon_font">20</span></h4>
+                            <p><a href="#">Author1</a>，<a href="#">Author2</a> &nbsp;-&nbsp; 2016 &nbsp;-&nbsp; 《自动化学报》&nbsp;-&nbsp; 被引量：130</p>
+                        </div>
+                        <div class="blog-left-right-bottom">
+                            <p>Vivamus fermentum vel lacus ac ornare. Vestibulum pulvinar massa pharetra risus pharetra, eu blandit risus viverra. Aenean in ultrices enim, ut tincidunt libero. Phasellus libero enim, semper ac felis eget, efficitur ultrices orci. Aenean tincidunt lacus lorem, non varius enim luctus sed. Quisque eu aliquet quam, et sollicitudin nibh. Duis finibus at felis eu laoreet. Nulla non lacus sem.</p>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+
+                <div class="blog-left-grids">
+                    <div class="blog-left-right_results">
+                        <div class="blog-left-right-top">
+                            <h4><a href="../resultpage.html">Integer et turpis augue. In hac habitasse platea dictumst.</a><img src="../images/point.png"><span class="point_icon_font">20</span></h4>
+                            <p><a href="#">Author1</a>，<a href="#">Author2</a> &nbsp;-&nbsp; 2016 &nbsp;-&nbsp; 《自动化学报》&nbsp;-&nbsp; 被引量：130</p>
+                        </div>
+                        <div class="blog-left-right-bottom">
+                            <p>Vivamus fermentum vel lacus ac ornare. Vestibulum pulvinar massa pharetra risus pharetra, eu blandit risus viverra. Aenean in ultrices enim, ut tincidunt libero. Phasellus libero enim, semper ac felis eget, efficitur ultrices orci. Aenean tincidunt lacus lorem, non varius enim luctus sed. Quisque eu aliquet quam, et sollicitudin nibh. Duis finibus at felis eu laoreet. Nulla non lacus sem.</p>
+                        </div>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
