--- a/results.html
+++ b/results.html
@@ -105,7 +105,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- //header -->
 <!-- about-heading -->
 <div class="about-heading">
-    <h2>Our <span>Blog</span></h2>
+    <h2>Search <span>Results</span></h2>
 </div>
 <!-- //banner -->
 <div class="domain domain_results">
@@ -140,49 +140,74 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div class="container">
         <div class="agile-blog-grids">
             <div class="col-md-8 agile-blog-grid-left" id="resultsContainer">
-                <div class="classification">
-                    排序：
-                    <select class="sort_select" id="classifyMethod">
-                        <option value ="correlation" selected="selected">按相关性</option>
-                        <option value ="cite_num">按被引量</option>
-                        <option value="publish_time">按时间降序</option>
-                    </select>
-                </div>
-                <div class="agile-blog-grid">
-                    <div class="blog-left-grids">
-                        <div class="blog-left-right_results">
-                            <div class="blog-left-right-top">
-                                <h4><a href="resultpage.html">Integer et turpis augue. In hac habitasse platea dictumst.</a><img src="images/point.png"><span class="point_icon_font">20</span></h4>
-                                <p><a href="#">Author1</a>，<a href="#">Author2</a> &nbsp;-&nbsp; 2016 &nbsp;-&nbsp; 《自动化学报》&nbsp;-&nbsp; 被引量：130</p>
-                            </div>
-                            <div class="blog-left-right-bottom">
-                                <p>Vivamus fermentum vel lacus ac ornare. Vestibulum pulvinar massa pharetra risus pharetra, eu blandit risus viverra. Aenean in ultrices enim, ut tincidunt libero. Phasellus libero enim, semper ac felis eget, efficitur ultrices orci. Aenean tincidunt lacus lorem, non varius enim luctus sed. Quisque eu aliquet quam, et sollicitudin nibh. Duis finibus at felis eu laoreet. Nulla non lacus sem.</p>
-                                <!--<a href="resultpage.html">More</a>-->
-                            </div>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
-                </div>
+                <!--<div class="classification results_quantity">-->
+                    <!--根据"a"搜索，共1000个结果-->
+                <!--</div>-->
+                <!--<div class="classification">-->
+                    <!--排序：-->
+                    <!--<select class="sort_select" id="classifyMethod" onchange="this.options[2].selected =true;">-->
+                        <!--<option value ="correlation" selected="selected">按相关性</option>-->
+                        <!--<option value ="cite_num">按被引量</option>-->
+                        <!--<option value="publish_time">按时间降序</option>-->
+                    <!--</select>-->
+                <!--</div>-->
+                <!--<div class="agile-blog-grid">-->
+                    <!--<div class="blog-left-grids">-->
+                        <!--<div class="blog-left-right_results">-->
+                            <!--<div class="blog-left-right-top">-->
+                                <!--<h4><a href="resultpage.html">Integer et turpis augue. In hac habitasse platea dictumst.</a><img src="images/point.png"><span class="point_icon_font">20</span></h4>-->
+                                <!--<p><a href="#">Author1</a>，<a href="#">Author2</a> &nbsp;-&nbsp; 2016 &nbsp;-&nbsp; 《自动化学报》&nbsp;-&nbsp; 被引量：130</p>-->
+                            <!--</div>-->
+                            <!--<div class="blog-left-right-bottom blog-left-right-bottom-results">-->
+                                <!--<p>Vivamus <em style="color: red">fermentum</em> vel lacus ac ornare. Vestibulum pulvinar massa pharetra risus pharetra, eu blandit risus viverra. Aenean in ultrices enim, ut tincidunt libero. Phasellus libero enim, semper ac felis eget, efficitur ultrices orci. Aenean tincidunt lacus lorem, non varius enim luctus sed. Quisque eu aliquet quam, et sollicitudin nibh. Duis finibus at felis eu laoreet. Nulla non lacus sem.</p>-->
+                                <!--&lt;!&ndash;<a href="resultpage.html">More</a>&ndash;&gt;-->
+                            <!--</div>-->
+                            <!--<div class="blog-left-right-bottom-2">-->
+                                <!--学科分类：<a href="#">车辆工程</a><a href="#">车辆工程2</a><a href="#">车辆工程2</a><a href="#">车辆工程2</a>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="clearfix"> </div>-->
+                    <!--</div>-->
+                <!--</div>-->
 
-                <nav>
-                    <ul class="pagination">
-                        <li>
-                            <a href="#" aria-label="Previous">
-                                <span aria-hidden="true">«</span>
-                            </a>
-                        </li>
-                        <li><span id="current_page">1</span></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li>
-                            <a href="#" aria-label="Next">
-                                <span aria-hidden="true">»</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
+                <!--<div class="agile-blog-grid">-->
+                    <!--<div class="blog-left-grids">-->
+                        <!--<div class="blog-left-right_results">-->
+                            <!--<div class="blog-left-right-top">-->
+                                <!--<h4><a href="resultpage.html">Integer et turpis augue. In hac habitasse platea dictumst.</a><img src="images/point.png"><span class="point_icon_font">20</span></h4>-->
+                                <!--<p><a href="#">Author1</a>，<a href="#">Author2</a> &nbsp;-&nbsp; 2016 &nbsp;-&nbsp; 《自动化学报》&nbsp;-&nbsp; 被引量：130</p>-->
+                            <!--</div>-->
+                            <!--<div class="blog-left-right-bottom blog-left-right-bottom-results">-->
+                                <!--<p>Vivamus <em style="color: red">fermentum</em> vel lacus ac ornare. Vestibulum pulvinar massa pharetra risus pharetra, eu blandit risus viverra. Aenean in ultrices enim, ut tincidunt libero. Phasellus libero enim, semper ac felis eget, efficitur ultrices orci. Aenean tincidunt lacus lorem, non varius enim luctus sed. Quisque eu aliquet quam, et sollicitudin nibh. Duis finibus at felis eu laoreet. Nulla non lacus sem.</p>-->
+                                <!--&lt;!&ndash;<a href="resultpage.html">More</a>&ndash;&gt;-->
+                            <!--</div>-->
+                            <!--<div class="blog-left-right-bottom-2">-->
+                                <!--&lt;!&ndash;学科分类：<a href="#">车辆工程</a>&ndash;&gt;-->
+                            <!--</div>-->
+                        <!--</div>-->
+                        <!--<div class="clearfix"> </div>-->
+                    <!--</div>-->
+                <!--</div>-->
+
+                <!--<nav>-->
+                    <!--<ul class="pagination">-->
+                        <!--<li>-->
+                            <!--<a href="#" aria-label="Previous">-->
+                                <!--<span aria-hidden="true">«</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                        <!--<li><span id="current_page">1</span></li>-->
+                        <!--<li><a href="#">2</a></li>-->
+                        <!--<li><a href="#">3</a></li>-->
+                        <!--<li><a href="#">4</a></li>-->
+                        <!--<li><a href="#">5</a></li>-->
+                        <!--<li>-->
+                            <!--<a href="#" aria-label="Next">-->
+                                <!--<span aria-hidden="true">»</span>-->
+                            <!--</a>-->
+                        <!--</li>-->
+                    <!--</ul>-->
+                <!--</nav>-->
             </div>
             <div class="col-md-4 agile-blog-grid-right">
                 <div class="categories">
