加入了专利内容

--- a/professor.html
+++ b/professor.html
@@ -169,9 +169,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
         </div>
     </div>
+    <!--//paper-->
+
+    <!--patent-->
+    <div class="paper">
+        <div class="container">
+            <div class="w3-banner-bottom-heading">
+                <h3>专利<span>成果</span></h3>
+            </div>
+            <div class="team-grids" id ="patentname_containner">
+            </div>
+        </div>
+    </div>
+    <!--//patent-->
 
     <!-- professorFuctionTop -->
-    <div class="team">
+    <div id="professorFuctionTop">
         <div class="container">
             <div class="w3-banner-bottom-heading">
                 <h3>相关<span>功能</span></h3>
@@ -186,6 +199,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </button>
                 <button id="proFucButton3" onclick="showDiv3()">
                     <p>修改资源购买积分</p>
+                </button>
+                <button id="proFucButton4" onclick="showDiv4()">
+                    <p>修改积分分配比例</p>
                 </button>
                 <div class="clearfix"> </div>
                 <!-- end Bottom to top-->
@@ -209,6 +225,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div id="proFuc3">
                 <h3>修改资源<span>购买积分</span></h3>
+                <textarea></textarea><br/>
+                <input type="submit" value="提交"/>
+            </div>
+            <div id="proFuc4">
+                <h3>修改积分<span>分配比例</span></h3>
                 <textarea></textarea><br/>
                 <input type="submit" value="提交"/>
             </div>
