犀利的一波操作，基本完成

--- a/results.html
+++ b/results.html
@@ -211,29 +211,29 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="col-md-4 agile-blog-grid-right">
                 <div class="categories">
-                    <h3>Categories</h3>
-                    <ul>
-                        <li><a href="#">Phasellus sem leo, interdum quis risus</a></li>
-                        <li><a href="#">Nullam egestas nisi id malesuada aliquet </a></li>
-                        <li><a href="#"> Donec condimentum purus urna venenatis</a></li>
-                        <li><a href="#">Ut congue, nisl id tincidunt lobor mollis</a></li>
-                        <li><a href="#">Cum sociis natoque penatibus et magnis</a></li>
-                        <li><a href="#">Suspendisse nec magna id ex pretium</a></li>
+                    <h3>SUBJECT</h3>
+                    <ul id="sub_list">
+                        <li><a href="#">空</a></li>
+                        <!--<li><a href="#">Nullam egestas nisi id malesuada aliquet </a></li>-->
+                        <!--<li><a href="#"> Donec condimentum purus urna venenatis</a></li>-->
+                        <!--<li><a href="#">Ut congue, nisl id tincidunt lobor mollis</a></li>-->
+                        <!--<li><a href="#">Cum sociis natoque penatibus et magnis</a></li>-->
+                        <!--<li><a href="#">Suspendisse nec magna id ex pretium</a></li>-->
                     </ul>
                 </div>
                 <div class="categories">
-                    <h3>Archive</h3>
-                    <ul class="marked-list offs1">
-                        <li><a href="#">May 2016 (7)</a></li>
-                        <li><a href="#">April 2016 (11)</a></li>
-                        <li><a href="#">March 2016 (12)</a></li>
-                        <li><a href="#">February 2016 (14)</a> </li>
-                        <li><a href="#">January 2016 (10)</a></li>
-                        <li><a href="#">December 2016 (12)</a></li>
-                        <li><a href="#">November 2016 (8)</a></li>
-                        <li><a href="#">October 2016 (7)</a> </li>
-                        <li><a href="#">September 2016 (8)</a></li>
-                        <li><a href="#">August 2016 (6)</a></li>
+                    <h3>TIME</h3>
+                    <ul class="marked-list offs1" id="time_list">
+                        <li><a href="#">空</a></li>
+                        <!--<li><a href="#">April 2016 (11)</a></li>-->
+                        <!--<li><a href="#">March 2016 (12)</a></li>-->
+                        <!--<li><a href="#">February 2016 (14)</a> </li>-->
+                        <!--<li><a href="#">January 2016 (10)</a></li>-->
+                        <!--<li><a href="#">December 2016 (12)</a></li>-->
+                        <!--<li><a href="#">November 2016 (8)</a></li>-->
+                        <!--<li><a href="#">October 2016 (7)</a> </li>-->
+                        <!--<li><a href="#">September 2016 (8)</a></li>-->
+                        <!--<li><a href="#">August 2016 (6)</a></li>-->
                     </ul>
                 </div>
             </div>
