犀利的一波操作，添加右侧分类部分

--- a/results.html
+++ b/results.html
@@ -213,7 +213,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="categories">
                     <h3>SUBJECT</h3>
                     <ul id="sub_list">
-                        <li><a href="#">空</a></li>
+                        <li><a href="#">Loading...</a></li>
                         <!--<li><a href="#">Nullam egestas nisi id malesuada aliquet </a></li>-->
                         <!--<li><a href="#"> Donec condimentum purus urna venenatis</a></li>-->
                         <!--<li><a href="#">Ut congue, nisl id tincidunt lobor mollis</a></li>-->
@@ -224,7 +224,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="categories">
                     <h3>TIME</h3>
                     <ul class="marked-list offs1" id="time_list">
-                        <li><a href="#">空</a></li>
+                        <li><a href="#">Loading...</a></li>
                         <!--<li><a href="#">April 2016 (11)</a></li>-->
                         <!--<li><a href="#">March 2016 (12)</a></li>-->
                         <!--<li><a href="#">February 2016 (14)</a> </li>-->
