修复收藏与浏览记录bug

--- a/user/userinfo.html
+++ b/user/userinfo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>userinfo</title>
+    <title>用户信息</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="" />
@@ -146,9 +146,6 @@
                 </li>
                 <li style="list-style: none">
                     <a href="browserecord.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">浏览记录</button></a>
-                </li>
-                <li style="list-style: none">
-                    <button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">购买记录</button>
                 </li>
             </ul>
         </aside>
