--- a/user/userinfo.html
+++ b/user/userinfo.html
@@ -147,6 +147,9 @@
                 <li style="list-style: none">
                     <a href="browserecord.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">浏览记录</button></a>
                 </li>
+                <li style="list-style: none">
+                    <a href="pointchangerecord.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">积分记录</button></a>
+                </li>
             </ul>
         </aside>
     </div>
@@ -168,10 +171,10 @@
 
             <div id="userinfo-content" class="agileits-contact-address" style="margin-top: 1rem">
                 <ul>
-                    <li><i class="fa fa-user" aria-hidden="true"></i><span id="username">undefined</span></h4></li>
+                    <li><i class="fa fa-user" aria-hidden="true"></i><span id="username" style="font-size: 2rem">undefined</span></li>
                     <!--<li><i class="fa fa-envelope" aria-hidden="true"></i><span>13121273185@163.com</span></li>-->
-                    <li><i class="fa fa-money" aria-hidden="true"></i><span id="user-point">undefined</span></li>
-                    <li><i class="fa  fa-credit-card" aria-hidden="true"></i><span id="user-credit">undefined</span></li>
+                    <li><i class="fa fa-money" aria-hidden="true"></i><span id="user-point" style="font-size: 2rem">undefined</span></li>
+                    <li><i class="fa  fa-credit-card" aria-hidden="true"></i><span id="user-credit" style="font-size: 2rem">undefined</span></li>
                 </ul>
             </div>
         </div>
