--- a/user/browserecord.html
+++ b/user/browserecord.html
@@ -149,7 +149,7 @@
                     <a href="browserecord.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">浏览记录</button></a>
                 </li>
                 <li style="list-style: none">
-                    <button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">购买记录</button>
+                    <a href="pointchangerecord.html"><button type="button" class="btn1 btn-group-vertical" style="border-bottom-color: #FFFFFF">积分记录</button></a>
                 </li>
             </ul>
         </aside>
