--- a/professor.html
+++ b/professor.html
@@ -188,8 +188,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="w3-banner-bottom-heading">
             <h3>专家关系<span>网络图</span></h3>
         </div>
-        <div>
-            <img id="professor_relation_image" src="/images/expert_relationship/1.png" style="margin: 0 auto"/>
+        <div style="margin-top: 100px">
+            <p style="text-align: center">
+                <img id="professor_relation_image" style="margin: 0 auto;"/>
+            </p>
         </div>
     </div>
     <!--//proRelation-->
@@ -198,7 +200,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <div id="professorFuctionTop">
         <div class="container">
             <div class="w3-banner-bottom-heading">
-                <h3>相关<span>功能</span></h3>
+                <h3>专属<span>功能</span></h3>
             </div>
             <div class="team-grids">
                 <!-- Bottom to top-->
